tests/e2e/object_int_index_invalid3.error
Error: syntax error in story at line 2, column 1

2|    a.b = true
      ^^^

E0131: `Map[int,boolean]` can't be dot-accessed with `b` of type `string`
